clusters/talos-pve/apps/media/network-policies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: jellyseerr-app-restrict
  namespace: media
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: jellyseerr
      app.kubernetes.io/instance: jellyseerr

  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "5055"
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"

    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: jellyfin
            app.kubernetes.io/name: jellyfin
      toPorts:
        - ports:
            - port: "8096"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: radarr
      toPorts:
        - ports:
            - port: "7878"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: sonarr
      toPorts:
        - ports:
            - port: "8989"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kavita-app-restrict
  namespace: media
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: kavita
      app.kubernetes.io/instance: kavita

  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "5000"
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"

    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
